--- a/index.html
+++ b/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<!-- fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap" rel="stylesheet">
-  
-<link rel="stylesheet" href="css/style.css">
+	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<!-- fonts -->
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap"
+		rel="stylesheet">
 
-  <title>Frontend Mentor | Stats preview card component</title>
+	<link rel="stylesheet" href="css/style.css">
+
+	<title>Frontend Mentor | Stats preview card component</title>
 
 </head>
-<body>
 
+<body>
+	<main>
+		<img src="images/image-header-desktop.jpg" alt="desktop-header">
+		<img src="images/image-header-mobile.jpg" alt="mobile-header">
+
+		<div class="content">
+			<h1>Get insights that help your business grow.</h1>
+
+			<p>
+				Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+				experience, and overall efficiency.
+			</p>
+
+			<div class="status">
+				<div class="stat">
+					<h2>10k+ </h2>
+					<p>companies</p>
+				</div>
+				<div class="stat">
+					<h2>314</h2>
+					<p>templates</p>
+				</div>
+				<div class="stat">
+					<h2>12m+</h2>
+					<p>queries</p>
+				</div>
+			</div>
+		</div>
+
+	</main>
 
 </body>
+
 </html>
-
-<!-- Get insights that help your business grow.
-
-Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-experience, and overall efficiency.
-
-10k+ companies
-314 templates
-12m+ queries -->
