add CSS code mobile first

--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
 
 <body>
 	<main>
-		<img src="images/image-header-desktop.jpg" alt="desktop-header">
-		<img src="images/image-header-mobile.jpg" alt="mobile-header">
+		<div class="image">
+			<img src="images/image-header-desktop.jpg" alt="desktop-header" class="desktop">
+			<img src="images/image-header-mobile.jpg" alt="mobile-header" class="mobile">
+		</div>
 
 		<div class="content">
-			<h1>Get insights that help your business grow.</h1>
+			<h1>Get <span>insights</span> that help your business grow.</h1>
 
 			<p>
 				Discover the benefits of data analytics and make better decisions regarding revenue, customer 
@@ -42,7 +44,7 @@
 					<p>templates</p>
 				</div>
 				<div class="stat">
-					<h2>12m+</h2>
+					<h2>12M+</h2>
 					<p>queries</p>
 				</div>
 			</div>
